[metadata]
name = druid_query
version = 0.1.0
author = Mihir Gadgil
description = Apache Druid querying client library
long_description = file: README.md
url = https://github.com/scimas/druidq
project_urls = 
    Bug Tracker = http://github.com/scimas/druidq/issues

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.9
install_requires = 
    requests==2.26

[options.packages.find]
where = src
