[metadata]
name = druid_query
version = 0.3.1
author = Mihir Gadgil
description = Apache Druid querying client library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/scimas/druid_query
project_urls = 
    Bug Tracker = http://github.com/scimas/druid_query/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.9
install_requires = 
    httpx==0.23.0

[options.packages.find]
where = src
